--- a/lib/crypto_dashboard_web/templates/page/index.html.heex
+++ b/lib/crypto_dashboard_web/templates/page/index.html.heex
@@ -1,2 +1,4 @@
 <h1 class="text-red-500 text-5xl font-bold text-center">Phoenix with Tailwind CSS</h1>
 <p>CryptoDashboard</p>
+<p x-data="{msg: 'Alpine works!'}" x-text="msg" >Alpine does not work :(</p>
+
