--- a/lib/crypto_dashboard_web/live/crypto_dashboard_live.html.leex
+++ b/lib/crypto_dashboard_web/live/crypto_dashboard_live.html.leex
@@ -3,10 +3,16 @@
 >
   <select name="product_id">
     <option selected disabled>Add a Crypto Product</option>
-    <%= for product <- CryptoDashboard.available_products() do %>
-      <option value="<%= to_string(product) %>">
-        <%= product.exchange_name %> - <%= product.currency_pair %>
-      </option>
+    <%= for {exchange_name, products} <- grouped_products_by_exchange_name() do %>
+      <optgroup label="<%= exchange_name %>">
+      <%= for product <- products do %>
+        <option value="<%= to_string(product) %>">
+            <%= crypto_name(product) %>
+            -
+            <%= fiat_character(product) %>
+        </option>
+      <% end %>
+      </optgroup>
     <% end %>
   </select>
   <button
@@ -24,53 +30,27 @@
     class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border border-gray-300 rounded-md"
   >
 </form>
-<div class="flex flex-col">
-  <div class="-my-2 overflow-x-auto sm:-mx-6 lg:-mx-8">
-    <div class="py-2 align-middle inline-block min-w-full sm:px-6 lg:px-8">
-      <div class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg">
-        <table class="min-w-full divide-y divide-gray-200">
-          <thead class="bg-gray-50">
-            <tr>
-              <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                Traded at
-              </th>
-              <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                Exchange
-              </th>
-              <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                Currency
-              </th>
-              <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                Price
-              </th>
-              <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                Volume
-              </th>
-            </tr>
-          </thead>
-          <tbody>
-            <%= for product <- @products, trade = @trades[product], not is_nil(trade) do %>
-              <tr class="bg-white">
-                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
-                  <%= trade.traded_at %>
-                </td>
-                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
-                  <%= trade.product.exchange_name %>
-                </td>
-                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">
-                  <%= trade.product.currency_pair %>
-                </td>
-                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
-                  <%= trade.price %>
-                </td>
-                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
-                  <%= trade.volume %>
-                </td>
-              </tr>
-            <% end %>
-          </tbody>
-        </table>
+<div class="grid grid-cols-1 gap-y-4 sm:grid-cols-2 sm:gap-x-6 sm:gap-y-10 lg:grid-cols-3 lg:gap-x-8">
+  <%= for product <- @products, trade = @trades[product], not is_nil(trade) do %>
+  <div class="group relative bg-white border border-gray-200 rounded-lg flex flex-col overflow-hidden">
+    <div class="aspect-w-4 aspect-h-2 bg-gray-200 group-hover:opacity-75 sm:aspect-none sm:h-48">
+      <img class="w-full h-full object-center object-cover" src="<%= crypto_icon(@socket, product) %>">
+    </div>
+    <div class="flex-1 p-4 space-y-2 flex flex-col">
+      <h3 class="text-sm font-medium text-gray-900">
+        <a href="#">
+          <span aria-hidden="true" class="absolute inset-0"></span>
+          <%= crypto_name(trade.product) %>
+        </a>
+      </h3>
+      <p class="text-sm text-gray-500"><%= trade.product.exchange_name %></p>
+      <div class="flex-1 flex flex-col justify-end">
+        <p class="text-sm italic text-gray-500"><%= human_datetime(trade.traded_at) %></p>
+        <p class="text-base font-medium text-gray-900">
+          <span><%= fiat_character(product) %></span><%= trade.price %>
+        </p>
       </div>
     </div>
   </div>
+  <% end %>
 </div>
