Switch endpoint name

--- a/lib/crypto_dashboard_web/templates/layout/header_nav.html.heex
+++ b/lib/crypto_dashboard_web/templates/layout/header_nav.html.heex
@@ -19,7 +19,7 @@
       <div class="flex-1 flex items-center justify-center sm:items-stretch sm:justify-start">
         <div class="hidden sm:flex sm:space-x-8">
           <%= link("Static", to: "/", class: get_path_class(@conn, "/"))  %>
-          <%= link("Live", to: "/btc", class: get_path_class(@conn, "/btc"))  %>
+          <%= link("Live", to: "/live", class: get_path_class(@conn, "/live"))  %>
         </div>
       </div>
     </div>
@@ -28,7 +28,7 @@
   <div x-show="open" class="sm:hidden" id="mobile-menu">
     <div class="pt-2 pb-4 space-y-1">
       <%= link("Static", to: "/", class: get_path_class(@conn, "/", true))  %>
-      <%= link("Live", to: "/btc", class: get_path_class(@conn, "/btc", true))  %>
+      <%= link("Live", to: "/live", class: get_path_class(@conn, "/live", true))  %>
     </div>
   </div>
 </nav>
